[package]
name = "tdxguest"
version = "0.0.0"
edition = "2021"
description = "cli tool for tdx"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
